jobs/slurm-852104.out
  File "/gpfs/mariana/home/svloor/Documents/vit/models/vit-base-patch16-224/main.py", line 67
    for _ in range(100);
                       ^
SyntaxError: invalid syntax
